--- a/todolist/templates/list_tasks.html
+++ b/todolist/templates/list_tasks.html
@@ -1,13 +1,54 @@
 <html>
     <body>
+    	<style>
+    	h1{
+    		width: 100%;
+    		height:50 px;
+    		background-color:#9999CC;
+    		text-align: center;
+    		padding: 8 px;
+    		font-family:helvetica, verdana, sans-serif;
+    		font size:24 px;
+    		color:#3300cc ;
+
+    	}
+    	b{
+    		text-align: center;
+    		font-family:helvetica, verdana, sans-serif;
+    		text-align: center;
+    		display: block;
+    		font size: 16 px;
+    		color:#544E4F;
+    		
+    	}
+    	a{
+    		font-family:helvetica,verdana;
+    		text-align: center;
+    		text-decoration:none;
+    		display: block;
+    		width: 150 px;
+    		height: 30 px ;
+    		border: 2 px solid #9999CC;
+    		background-color: #9999CC;
+    		padding: 10 px;
+    		border-color:#9999CC;
+    		color:#544E4F;
+    	a hover{
+    		background color: #6666CC;
+    	}	
+
+    	}
+    	</style>
         <h1>To Do List</h1>
         <p>
-            <b><em style= "color: blue">These are your tasks to be completed:</b></em>
+            <b>These are your tasks to be completed:</b>
                     {% for task in tasks %}
-                   <i> <li><input type="checkbox"/> {{task.title}}</li></i>
-                    {% endfor %}
-
+                    {% if not task.done %}
+                    <ul><a href="{{url_for("edit_task",task_id = task.id)}}">{{task.title}}</a></ul>
+                    {% endif %}
+                    {% endfor %} <br><br><br>
         </p>
+        <a href="{{url_for("make_task")}}"shape = "circle", background-color="#00000", >Add a task!</a>
 
     </body>
 </html>
