--- a/todolist/templates/make_tasks.html
+++ b/todolist/templates/make_tasks.html
@@ -4,7 +4,7 @@
 		<form action="/add" method="post">
 			Task: <input type="text" name="title">
 			<br>
-			Notes: <input type="text" name="comments">
+			Notes: <input type="text" name="notes">
 			<br>
 			<input type = "submit">
 		</form>
